Make header font size fixed on mobile

--- a/site.css
+++ b/site.css
@@ -91,8 +91,7 @@ pre > code {
     .header {
         height: 60px;
         padding: 0;
-        font-size: 12px;
-        font-size: 4.5vw;
+        font-size: 14px;
         margin-bottom: 24px;
     }
     .header-item {
